--- a/app/walkandplay/trunk/client/web/css/geotracing.css
+++ b/app/walkandplay/trunk/client/web/css/geotracing.css
@@ -35,7 +35,7 @@ body {
 	top:0px;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:11px;
-	background-color:#000000;
+	background-color:#ffffff;
 	overflow:hidden;
 }
 #logobox,#buttonbar {
@@ -70,14 +70,14 @@ body {
 }
 
 #buttonbar {
-	top:200px;
+	top:210px;
 	z-index:3;
 }
 #map {
 	width:1600px;
 	top:0px;
 	left:0px;
-	height:1000px;
+	height:500px;
 }
 
 .c {
@@ -91,13 +91,13 @@ body {
 	bottom:40px;
 	width:100%;
 	z-index:3;
-	height:100px;
+	height:auto;
 	font-weight:bold;
 	display:block;
 	left:40px;
 	line-height:20px;
 	overflow:hidden;
-}	
+	text-align:justify;}	
 #tagcloud ul {
 	position:relative;
 	top:10px;
@@ -127,6 +127,7 @@ a:link, a:active, a:visited {
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:14px;
 	line-height:20px;
+	z-index: 3;
 }
 .bbottom {
 	width:100%; 
@@ -134,7 +135,7 @@ a:link, a:active, a:visited {
 	display:block; 
 	background:url(../img/border.png) repeat-x;
 	position:absolute; 
-	bottom:0px;
+	top:465px;
 	z-index:2;
 }
 .btop {
@@ -157,7 +158,7 @@ a:link, a:active, a:visited {
 }
 .bright {
 	width:50px; 
-	height:100%;
+	height:520px;
 	display:block; 
 	background:url(../img/borderright.png) repeat-y;
 	position:absolute; 
@@ -167,7 +168,7 @@ a:link, a:active, a:visited {
 }
 .bleft {
 	width:50px; 
-	height:100%;
+	height:520px;
 	display:block; 
 	background:url(../img/borderleft.png) repeat-y;
 	position:absolute; 
@@ -225,9 +226,33 @@ a:link, a:active {
 	left: 276px;
 	bottom: 150px;
 	z-index:4;
+	display:none;
 }#formblock {
 	width: 700px;
 	position: absolute;
 	left: 52px;
 	top: 200px;
+}
+
+.contentblock, .contentblockgrey {
+	padding: 5px;
+
+}
+
+#about {
+	position:absolute;
+	left:52px;
+	width:800px;
+	top:210px;
+	z-index:4;
+}
+#upcoming {
+	position:absolute;
+	left:365px;
+	width:400px;
+	top:52px;
+	z-index:4;
+}
+#upcoming .contentblock {
+	height:400px;
 }
