--- a/app/walkandplay/trunk/client/web/css/geotracing.css
+++ b/app/walkandplay/trunk/client/web/css/geotracing.css
@@ -261,3 +261,17 @@ a:link, a:active {
 #buttonbar li img, #archivenavbox li, #livenavbox li {
 	cursor:pointer;
 }
+
+ul li {
+	display:block;
+	list-style:none;
+	margin:0px;
+	padding:0px;
+	
+}
+ul {
+	display:block;
+	list-style:none;
+	margin:0px;
+	padding:0px;
+}
