base: updates to "my" pages for profile edit and media upload

--- a/base/trunk/server/webapp/gt/my/assets/style.css
+++ b/base/trunk/server/webapp/gt/my/assets/style.css
@@ -46,6 +46,12 @@ html, body {
 	background-color: #ccc;
 }
 
+#leftcol a {
+	padding-left: 8px;
+	text-decoration: none;
+	color: #660000;
+}
+
 #content {
 	margin: 0px;
 	margin-left: 200px;
