--- a/base/trunk/server/webapp/gt/css/gtapp.css
+++ b/base/trunk/server/webapp/gt/css/gtapp.css
@@ -17,8 +17,8 @@ html,body {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100;
-  height: 100;
+  width: 100%;
+  height: 100%;
   border: 0;
   margin: 0;
 }
