--- a/base/trunk/server/webapp/gt/css/gtwidget.css
+++ b/base/trunk/server/webapp/gt/css/gtwidget.css
@@ -13,7 +13,7 @@
 	text-decoration: none;
 	margin: 0px;
 	padding: 0px;
-	clip: rect( 0, 8, 8, 0 );
+	/* clip: rect(0 8 8 0); */
 	border: 2px solid #000000;
 }
 
