--- a/app/walkandplay/trunk/client/web/css/geotracingfs.css
+++ b/app/walkandplay/trunk/client/web/css/geotracingfs.css
@@ -1,6 +1,8 @@
 /* CSS Document */
 
-
+li, ul {
+	list-style:none;
+}
 input {
 
   }
@@ -75,7 +77,7 @@ input.large {
 }
 
 #buttonbar {
-	top:220px;
+	top:200px;
 	z-index:3;
 }
 #map {
@@ -94,21 +96,17 @@ input.large {
 #tagcloud {
 	position:absolute;
 	bottom:40px;
-	width:100%;
+	width:600px;
 	z-index:3;
-	height:auto;
 	font-weight:bold;
 	display:block;
-	left:40px;
+	left:52px;
 	line-height:20px;
 	overflow:hidden;
 }	
 #tagcloud ul {
 	position:relative;
 	top:10px;
-}
-#tagcloud .contentblockgrey {
-	margin-right:200px;
 }
 
 #tagcloud a {
@@ -127,11 +125,11 @@ a:link, a:active, a:visited {
 #signup_block {
 	position:absolute;
 	bottom:40px;
-	right:55px;
 	width: 150px;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:14px;
 	line-height:20px;
+	left: 662px;
 }
 .bbottom {
 	width:100%; 
@@ -191,27 +189,21 @@ div#nifty{ margin: 0 10%;background: #FFFFFF	;}
 	padding: 5px;
 }
 .contentblockgrey{width:auto;border-left:solid 6px #EEEEEE;border-right:solid 6px #EEEEEE;background: #EEEEEE;text-align:left;}
-#tagcloud .contentblockgrey{width:auto;border-left:solid 6px #EEEEEE;border-right:solid 6px #EEEEEE;background: #EEEEEE;margin-right:300px;}
+#tagcloud .contentblockgrey{width:auto;border-left:solid 6px #EEEEEE;border-right:solid 6px #EEEEEE;background: #EEEEEE;}
 
 b.rtop, b.rbottom{display:block;}
 b.rtop b, b.rbottom b{display:block;height: 1px;overflow: hidden; background: #FFFFFF}
 b.rtopgrey b, b.rbottomgrey b{display:block;height: 1px;overflow: hidden; background: #EEEEEE}
-
 b.r1{margin: 0 5px}
 b.r2{margin: 0 3px}
 b.r3{margin: 0 2px}
 b.rtop b.r4, b.rbottom b.r4{margin: 0 1px;height: 2px}
-
-
-#tagcloud .r1{margin-right:305px;}
-#tagcloud .r2{margin-right:303px;}
-#tagcloud .r3{margin-right:302px;}
-#tagcloud .r4{margin-right:301px;}
-
 .grey {
 	background:#EEEEEE;
 }
-
+area,#buttonbar img {
+	cursor:pointer;
+}
 
 #bottomanchor {
 	right:25px;
@@ -242,5 +234,17 @@ a:link, a:active {
 	width: 700px;
 	position: absolute;
 	left: 52px;
-	top: 210px;
+	top: 200px;
+}
+
+#about {
+	position:absolute;
+	left:52px;
+	width:800px;
+	top:272px;
+	z-index:4;
+}
+
+#navbox li,#archivetoursbox li,#livetoursbox li,#archivetracksbox li,#archivenavbox li {
+	cursor:pointer;
 }
