wnp: in progress

--- a/app/walkandplay/trunk/client/phone/resources/Nokia/N73/polish.css
+++ b/app/walkandplay/trunk/client/phone/resources/Nokia/N73/polish.css
@@ -11,11 +11,7 @@ menu {
 	background {
 		type: image;
 		color: transparent;
-		image: url( bg.png );
-	}
+		image: url( bg-stripe.png );
+        repeat:repeat;
+    }
 }
-
-form{
-    background-image: url( bg.png );
-}
-
