--- a/app/walkandplay/trunk/client/phone/resources/Nokia/N73/polish.css
+++ b/app/walkandplay/trunk/client/phone/resources/Nokia/N73/polish.css
@@ -4,14 +4,14 @@
   */
 
 menu {
-	menubar-color: transparent;
+	/*menubar-color: transparent;*/
 }
 
 .mainScreen {
-	background {
+	/*background {
 		type: image;
 		color: transparent;
 		image: url( bg-stripe.png );
         repeat:repeat;
-    }
+    }*/
 }
