--- a/app/walkandplay/trunk/client/phone/resources/polish.css
+++ b/app/walkandplay/trunk/client/phone/resources/polish.css
@@ -116,7 +116,7 @@ title {
 	font-color: BLACK;
 	background-color: WHITE;
 	border: none;
-	layout: left | horizontal-expand;
+	layout: center | horizontal-expand;
     /*background-image: url(gt_logo.png);*/
     icon-image: url(gt_logo.png); 
 }
@@ -134,7 +134,7 @@ focused {
         arc: 8;
         color: WHITE;
         border-color: BLACK;
-        border-width: 2;
+        border-width: 1;
     }
 
     font {
@@ -157,9 +157,9 @@ focused {
   * layout.
   */
 .mainScreen {
-    padding: 2;
-    padding-left: 2;
-    padding-right: 2;
+    padding: 5;
+    padding-left: 5;
+    padding-right: 5;
     background {
         color: WHITE;
     }
@@ -174,9 +174,9 @@ focused {
 }
 
 .defaultScreen {
-    padding: 2;
-    padding-left: 2;
-    padding-right: 2;
+    padding: 5;
+    /*padding-left: 5;
+    padding-right: 5;*/
     /*background {
         *//*color: LIGHTBLUE;*//*
         type: smooth-color;
@@ -187,8 +187,8 @@ focused {
     layout: horizontal-expand | top | left;
     columns:1;
     background{
-        border-width:2;
         /*image:url(bg-stripe.png);
+        border-width:2;
         repeat:repeat;*/
     }
     font-size: small;
@@ -290,7 +290,7 @@ focused {
     margin:2;
     padding:2;
     border{
-        width:2;
+        width:1;
         color:GREY;
         type:round-rect;
         /*type:shadow;*/
@@ -325,7 +325,7 @@ focused {
     font-size: small;
     layout: center;
     border{
-        width:2;
+        width:1;
         color:GREY;
         type:round-rect;
         arc:6;
@@ -341,7 +341,7 @@ focused {
     font-size: small;
     layout: horizontal-expand | horizontal-center | top;
     border{
-        width:2;
+        width:1;
         color:GREY;
         type:round-rect;
         arc:6;
@@ -356,13 +356,12 @@ focused {
     font-size: small;
     layout: horizontal-expand | horizontal-center | top;
     border{
-        width:2;
+        width:1;
         color:GREY;
         type:round-rect;
         arc:6;
     }
     background-color:LIGHTBLUE;
-    font-color: GREY;
 }
 
 
