--- a/app/diwi/trunk/client/web/home/css/config.css
+++ b/app/diwi/trunk/client/web/home/css/config.css
@@ -4,25 +4,25 @@ body {
  padding: 0;
  font-size: 1.1em;
  font-family: verdana, arial, helvetica, sans-serif;
+ color:#5a3d1c;
+
 }
-h1 {
- font-family: verdana, arial, helvetica, sans-serif;
- margin: 0 0 10px 0;
+
+H1 {
+ font-family: Georgia, Times New Roman, Times, serif;
+ line-height: 1.6em;
+ font-size: 1.7em;
+ margin: 20px 20px 16px 20px;
  padding: 0;
- color: #888;
 }
+
 h2 {
  font-family: verdana, arial, helvetica, sans-serif;
  margin: 0 0 5px 0;
  padding: 0;
  font-size: 1.1em;
 }
-Welkom {
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.1em;
- font-size: 1.6em;
- padding: 0;
-}
+
 .content>p {
  margin: 0;
 }
@@ -30,10 +30,10 @@ Welkom {
  text-indent: 30px;
 }
 a {
- color: blue;
+ color: #98453D;
  font-family: verdana, arial, helvetica, sans-serif;
 /* font-weight: 600;*/
- text-decoration: none;
+ text-decoration: underline;
 }
 a:link {
 }
@@ -49,9 +49,18 @@ p{
  font-size: 0.7em;
 }
 
-pp{
-	margin-left:30px;
+H3{
+ margin-left:20px;
+ font-size: 1.0em;
 }
+
+H4 {
+ line-height: 1.1em;
+ font-size: 0.6em;
+ margin: 0 0 0 0;
+ padding: 0;
+}
+
 /* All the content boxes belong to the content class. */
 .header {
  position: relative;
@@ -62,39 +71,6 @@ pp{
  z-index: 300;
 }
 
-
-WelkomHeader {
- font-family: Georgia, Times New Roman, Times, serif;
- line-height: 1.6em;
- font-size: 1.7em;
- margin: 20px 20px 16px 20px;
- padding: 0;
-}
-Author {
- line-height: 1.1em;
- font-size: 1.0em;
- margin: 0 0 16px 20px;
- padding: 0;
- color:#CCCCCC;
-}
-
-watistext {
- line-height: 1.1em;
- font-size: 0.6em;
- margin: 0 0 0 0;
- padding: 0;
- color:grey;
-}
-
-welkomtekst {
- line-height: 1.0em;
- font-size: 0.6em;
- margin-left:30px;
- color:#000000;
- width:200px;
-/* clear:right;*/
- padding:10px;
-}
 
 #header {
  position: absolute;
@@ -120,8 +96,9 @@ welkomtekst {
  top: 270px;
  left: 0px;
  z-index: 10;
+/* background-color:#FFFFFF;*/
  background-color:#F6F8F5;
-}
+ }
 #back{
  position: absolute;
  width: 800px;
@@ -139,58 +116,101 @@ welkomtekst {
 #topfoto {
  position: absolute;
  width: auto;
- top: 8px;
- left: 207px;
+ top: 7px;
+ left: 210px;
  z-index: 70;
 }
 #rechterkolom {
  position: absolute;
  width: auto;
- top: 100px;
- left: 608px;
+ top: 0px;
+ left: 598px;
  z-index: 100;
 }
+#bovenbutlijn {
+ position: relative;
+ width: auto;
+ top: 0px;
+ left: -7px;
+ z-index: 20;
+}
+#butinloggen {
+ position: relative;
+ width: auto;
+ top: -5px;
+ left: 0px;
+ z-index: 200;
+}
+#butmijnpagina {
+ position: relative;
+ width: auto;
+ top: -5px;
+ left: 0px;
+ z-index: 200;
+}
+#butmaakroute {
+ position: relative;
+ width: auto;
+ top: -5px;
+ left: 0px;
+ z-index: 200;
+}
+#onderbutlijn {
+ position: relative;
+ width: auto;
+ top: -5px;
+ left: 0px;
+ z-index: 100;
+}
+
 #inlogbox {
 	position:relative;
 	width: auto;
-	top: 0px;
-	left:0px;
+	top: -5px;
+	left:10px;
 	z-index:100;
+}
+#inlogform {
+ position: relative;
+ width: auto;
+ top: -185px;
+ left: 20px;
+ z-index: 100;
 }
 #videobox {
  position: relative;
  width: auto;
- top: 0px;
- left: 0px;
+ top: -5px;
+ left: 10px;
  z-index: 100;
 }
 #fotovideobox {
  position: relative;
  width: auto;
- top: -180px;
- left: 15px;
+ top: -185px;
+ left: 25px;
  z-index: 200;
 }
 #spotmetbox {
  position: relative;
  width: auto;
- top: -170px;
- left: -2px;
+ top: -175px;
+ left: 8px;
  z-index: 50;
 }
 #butintrovideo {
  position: relative;
  width: auto;
- top: -302px;
- left: 60px;
+ top: -307px;
+ left: 70px;
  padding: 10px;
  z-index: 100;
 }
 #watistext {
  position: relative;
  width: 140px;
- top: -300px;
- left: 75px;
+ top: -305px;
+ left: 85px;
  z-index: 100;
 }
 
@@ -218,6 +238,11 @@ welkomtekst {
  font-size:35px;
  color:#FFFFFF;
 }
+#fototekst a{
+ text-decoration: none;
+ color:#FFFFFF;
+ cursor:pointer;
+}
 #fotoprev {
  position: absolute;
  background-color:#FF00CC;
@@ -240,28 +265,6 @@ welkomtekst {
 	color:#6600FF;
 }
 
-#butinloggen {
- position: absolute;
- width: auto;
- top: 7px;
- left: 598px;
- z-index: 100;
-}
-#butmijnpagina {
- position: absolute;
- width: auto;
- top: 24px;
- left: 598px;
- z-index: 100;
-}
-#butmaakroute {
- position: absolute;
- width: auto;
- top: 50px;
- left: 598px;
- z-index: 100;
-}
-
 #tekst {
  position: absolute;
  width: auto;
@@ -276,7 +279,7 @@ welkomtekst {
  position: absolute;
  width: auto;
  top: 205px;
- left: 209px;
+ left: 212px;
  z-index: 100;
 }
 #butroutes {
@@ -290,7 +293,7 @@ welkomtekst {
  position: absolute;
  width: auto;
  top: 205px;
- left: 380px;
+ left: 381px;
  z-index: 100;
 }
 #butfaq {
