--- a/app/diwi/trunk/client/web/mypage/css/config.css
+++ b/app/diwi/trunk/client/web/mypage/css/config.css
@@ -17,6 +17,12 @@ h2 {
  padding: 0;
  font-size: 1.1em;
 }
+input {
+	width:				50px;
+	text-align:			right;
+	padding:			1px;
+	margin-right:		15px;
+}
 
 .content>p {
  margin: 0;
@@ -135,6 +141,21 @@ personaliameer {
  z-index: 1;
 }
 
+#mijnpaginacontainer{
+ position: absolute;
+ width: 800px;
+ top: 0px;
+ left: 0px;
+ z-index: 1;
+}
+#maakroutecontainer{
+ position: absolute;
+ width: 800px;
+ top: 0px;
+ left: 0px;
+ z-index: 1;
+}
+
 
 /************************** Eerste laag, z=100 ************************************************/
 #commentaarbox {
@@ -172,6 +193,140 @@ personaliameer {
  left: 20px;
  z-index: 100; 
 }
+
+
+#slider1 {
+ position: absolute;
+ width: 280px;
+ top: 180px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s1text {
+ position: absolute;
+ width: 280px;
+ top: 180px;
+ left: 350px;
+ z-index: 100; 
+}	
+#slider2 {
+ position: absolute;
+ width: 280px;
+ top: 220px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s2text {
+ position: absolute;
+ width: 280px;
+ top: 220px;
+ left: 350px;
+ z-index: 100; 
+}	
+#slider3 {
+ position: absolute;
+ width: 280px;
+ top: 260px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s3text {
+ position: absolute;
+ width: auto;
+ top: 260px;
+ left: 350px;
+ z-index: 100; 
+}	
+#slider4 {
+ position: absolute;
+ width: 280px;
+ top: 300px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s4text {
+ position: absolute;
+ width: 280px;
+ top: 300px;
+ left: 350px;
+ z-index: 100; 
+}	
+
+#slider5 {
+ position: absolute;
+ width: 280px;
+ top: 340px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s5text {
+ position: absolute;
+ width: auto;
+ top: 340px;
+ left: 350px;
+ z-index: 100; 
+}	
+#slider6 {
+ position: absolute;
+ width: 280px;
+ top: 380px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s6text {
+ position: absolute;
+ width: 280px;
+ top: 380px;
+ left: 350px;
+ z-index: 100; 
+}	
+
+#slider7 {
+ position: absolute;
+ width: 280px;
+ top: 420px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s7text {
+ position: absolute;
+ width: auto;
+ top: 420px;
+ left: 350px;
+ z-index: 100; 
+}	
+#slider8 {
+ position: absolute;
+ width: 280px;
+ top: 460px;
+ left: 50px;
+ z-index: 100; 
+}	
+#s8text {
+ position: absolute;
+ width: 280px;
+ top: 460px;
+ left: 350px;
+ z-index: 100; 
+}	
+
+
+#total {
+ position: absolute;
+ width: 50px;
+ top: 80px;
+ left: 100px;
+ z-index: 100; 
+}	
+#totaltekst {
+ position: absolute;
+ width: 50px;
+ top: 170px;
+ left: 100px;
+ z-index: 100; 
+}	
+
+
 /************************* Tweede laag, z=500 **********************************************/
 #line {
  position: absolute;
