--- a/app/diwi/trunk/client/web/mypage/css/basis.css
+++ b/app/diwi/trunk/client/web/mypage/css/basis.css
@@ -1,6 +1,6 @@
 body {
  position: relative;
- margin: 20px;
+ margin: 0px;
  padding: 0;
  font-size: 1.1em;
  font-family: verdana, arial, helvetica, sans-serif;
@@ -172,5 +172,21 @@ a:hover {
  line-height: 1.6em;
  font-size: 1.4em;
  margin: 0 0 16px 0;
+ font-weight:bold;
+}
+#routeheader {
+ position: absolute;
+ width: auto;
+ top: 130px;
+ left: 157px;
+ z-index: 500;
+ background-color:#F6F8F5;
+}
+#routeheader p {
+ font-family: Georgia, Times New Roman, Times, serif;
+ line-height: 1.1em;
+ font-size: 1.1em;
+ margin: 0 0 16px 0;
+ padding: 0;
  font-weight:bold;
 }
